[package]
name = "openvm-keccak256-circuit"
description = "OpenVM circuit extension for keccak256"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-circuit = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }

p3-keccak-air = { workspace = true }

strum.workspace = true
tiny-keccak.workspace = true
itertools.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
serde.workspace = true
cfg-if.workspace = true

[dev-dependencies]
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils"] }
hex.workspace = true

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel", "jemalloc"]
parallel = ["openvm-circuit/parallel"]
test-utils = ["openvm-circuit/test-utils"]
tco = ["openvm-rv32im-circuit/tco"]
# performance features:
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]
cuda = [
    "dep:openvm-cuda-backend",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-builder",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
]
touchemall = [
    "cuda",
    "openvm-circuit/touchemall",
    "openvm-circuit-primitives/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-cuda-common/touchemall",
    "openvm-rv32im-circuit/touchemall",
]
