[package]
name = "openvm-native-circuit"
description = "OpenVM circuit extension for native instructions"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-poseidon2-air = { workspace = true }
openvm-circuit = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-native-compiler = { workspace = true }

openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }

p3-field = { workspace = true }

strum.workspace = true
itertools.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
eyre.workspace = true
serde.workspace = true
static_assertions.workspace = true
cfg-if.workspace = true

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[dev-dependencies]
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-native-circuit = { workspace = true, features = ["test-utils"] }
openvm-native-compiler-derive = { workspace = true }
p3-symmetric = { workspace = true }
test-case = { workspace = true }
test-log = { workspace = true }

[features]
default = ["parallel", "jemalloc"]
tco = ["openvm-rv32im-circuit/tco"]
jemalloc = ["openvm-circuit/jemalloc"]
parallel = ["openvm-circuit/parallel"]
test-utils = ["openvm-circuit/test-utils"]
cuda = [
    "dep:openvm-cuda-backend",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-builder",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda"
]
touchemall = [
    "cuda",
    "openvm-circuit/touchemall",
    "openvm-circuit-primitives/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-cuda-common/touchemall",
    "openvm-rv32im-circuit/touchemall",
]
