[package]
name = "openvm-sha256-circuit"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenVM circuit extension for sha256"

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-circuit = { workspace = true }
openvm-instructions = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-sha256-air = { workspace = true }

derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
serde.workspace = true
sha2 = { version = "0.10", default-features = false }
strum = { workspace = true }
cfg-if.workspace = true

[dev-dependencies]
hex = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils"] }

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel", "jemalloc"]
parallel = ["openvm-circuit/parallel"]
test-utils = ["openvm-circuit/test-utils"]
tco = ["openvm-rv32im-circuit/tco"]
# performance features:
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

cuda = [
    "dep:openvm-cuda-builder",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-backend",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
]
touchemall = [
    "cuda",
    "openvm-circuit/touchemall",
    "openvm-circuit-primitives/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-cuda-common/touchemall",
    "openvm-rv32im-circuit/touchemall",
]
